fixed top row alignment

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 	}
 
 	.channel-top-row div {
-		width: 210.5px;
+		width: 197px;
 	}
 
 	.channel-avatar img {
